<resources>
    <string name="app_name">cndd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Phone Number</string>
    <string name="pass">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_search">Tìm kiếm sản phẩm</string>
    <string name="buy">Buy</string>
    <string name="confirm_buy">Are you confirm buy this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pay">Payed</string>
    <string name="confirm_pay">Are you confirm payed this order?</string>
    <string name="check_new_order">Check new order</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="design">Design</string>
    <string name="product_name">Product Name...</string>
    <string name="product_description">Product Description...</string>
    <string name="product_price">Product Price...</string>
    <string name="add_product">Add Product</string>
    <string name="t_ng_ti_n">Tổng tiền</string>
    <string name="mua_h_ng">Mua hàng</string>
    <string name="_4_5">4.5</string>
    <string name="_123_danh_gia">(123 danh gia)</string>
    <string name="_0">$0</string>
    <string name="th_m_v_o_gi_h_ng">Thêm vào giỏ hàng</string>

</resources>