<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.SignUpFragment">

    <EditText
        android:layout_marginTop="48dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:drawablePadding="16dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="14sp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:drawablePadding="16dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:drawableLeft="@drawable/ic_baseline_check_box_24"
        android:hint="@string/confirm_password"
        android:textSize="14sp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/buttons"
        android:padding="12dp"/>

</LinearLayout>