<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_add_detail"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="16dp"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_ng_ti_n"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/costTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="17sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/buyButton"
            android:text="@string/mua_h_ng"
            android:textColor="@color/white"
            android:layout_weight="2"
            android:textAllCaps="false"
            android:background="@drawable/buttons_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</RelativeLayout>